# RL-environment

./: .gitignore  Dockerfile  __init__.py  client.py  graders.py  inference.py  models.py  readme.md  results.json  trl_env.py
code-review/code_review_env/: .gitignore  README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  results.json  smoke_test.py  tasks.py  trl_env.py
code-review/code_review_env/server/: Dockerfile  app.py  environment.py  requirements.txt
code-review/kernel_env/: README.md
drug_interaction_env/: .dockerignore  README.md  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  results.json  tasks.py
drug_interaction_env/drug_interaction_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
drug_interaction_env/scripts/: real_data.py  real_data_eval.py
drug_interaction_env/server/: Dockerfile  __init__.py  app.py  environment.py
drug_interaction_env/tests/: test_environment.py  test_graders.py  test_real_data.py
drug_interaction_env/ui/: package-lock.json  package.json
drug_interaction_env/ui/app/: globals.css  layout.tsx  page.tsx
drug_interaction_env/ui/app/api/env/[...path]/: route.ts
drug_interaction_env/ui/app/api/results/: route.ts
scripts/: validate-submission.sh
server/: app.py  environment.py  requirements.txt
