[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drug_interaction_env"
version = "1.0.0"
description = "OpenEnv microservice for drug interaction reasoning with dense safety-aware rewards."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "openenv-core",
  "httpx>=0.27.0",
  "openai>=1.30.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
py-modules = ["models", "tasks", "graders", "client", "inference"]

[tool.setuptools.packages.find]
include = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
